<?xml version="1.0" encoding="utf-8"?>
<!--
 /**
 * @author Alex Tauber
 * 
 * This file is part of the Android app MTKutility.
 * 
 * MTKutility is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3 of the License. This extends to files
 * included that were authored by others and modified to make them suitable for
 * MTKutility. All files included were subject to open source licensing.
 * 
 * MTKutility is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You can review a copy of the GNU General Public License
 * at http://www.gnu.org/licenses.
 *
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".logDnldFragment" >

    <TextView
        android:id="@+id/binDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/bDLdesc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/btvBINfile"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/binDesc"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/binDesc"
        android:minHeight="12dp"
        android:clickable="true"
        android:hint="@string/bDLpath" />

    <TextView
        android:id="@+id/gpxDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/binDesc"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="25dp"
        android:text="@string/gDLdesc" />

    <TextView
        android:id="@+id/btvGPXpath"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gpxDesc"
        android:layout_alignLeft="@+id/btvBINfile"
        android:layout_alignParentRight="true"
        android:minHeight="12dp"
        android:clickable="true"
        android:hint="@string/gDLpath" />

    <Button
        android:id="@+id/btnMkGPX"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpxDesc"
        android:minHeight="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/mcb_MakeGPX" >

    </Button>

    <CheckBox
        android:id="@+id/mcb1OneTrk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnMkGPX"
        android:layout_toRightOf="@+id/btnMkGPX"
        android:hint="@string/createOneTrkPref_summary"
        android:text="@string/createOneTrkPref"
        android:textSize="10sp" />

    <ScrollView
        android:id="@+id/msv_Text"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnMkGPX"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_border" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mtv_Serial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>